--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -461,7 +461,7 @@ Model & Covariates & AIC & $\hat{P_a}$ & $\% CV \hat{P_a}$ & K-S $p$\\
 \hline
  & \textit{Ants} & & & & \\
 Hn 2-pt & None & 754.61 & 0.183 & 16.2 & 0.96 \\
-Hn 2-pt & \texttt{habitat} & 751.27 & 0.150 & 20.0 & 0.97 \\ 
+Hn 2-pt & \texttt{habitat} & 751.27 & 0.150 & 20.2 & 0.97 \\ 
 Hn 2-pt & \texttt{species} & 756.59 & 0.184 & 16.35 & 0.94 \\  
 Hn 2-pt & \texttt{nest.size} & 741.64 & 0.214 & 15.71 & 0.76 \\   
 Hn 2-pt & \texttt{habitat} + \texttt{species} & 749.05 & 0.152 & 19.85 & 0.94\\ 
@@ -491,6 +491,16 @@ Hr & \texttt{obs} + \texttt{mas} & \textbf{10777.72} & 0.3 & 0.03 & 0.036 \\
 \end{tabular}
 \label{pilot-table}
 \end{table}
+
+% now get but check what Distance reports!
+%1.43 
+%1.81 
+%1.83 
+%10.74 
+%2.09 
+%1.84 
+%1.85 
+%2.28 
 
 \section{Discussion}
 \label{s:discuss}
